--- a/tarea2/website_entrenamos.uy/src/main/webapp/index.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="entrenamos.uy">
+    <meta name="author" content="mbarrera">
 
     <!-- Bootstrap CSS -->
     <link href="./resources/css/bootstrap.min.css" rel="stylesheet" >
@@ -27,7 +28,7 @@
           </form>
         </div>
         <div class="nav navbar-nav navbar-right">
-        	<li><a href="#">Iniciar Sesion</a></li>
+        	<li><a href="login.html">Iniciar Sesion</a></li>
         	<li><span class="m-2" style="color: #ffffff">|</span></li>
         	<li><a href="#">Registrarse</a></li>
         </div>
