--- a/tarea2/website_entrenamos.uy/src/main/webapp/index.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/index.html
@@ -16,16 +16,53 @@
 
     <header>
       <!-- Fixed navbar -->
-      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
         <a class="navbar-brand" href="#">Entrenamos.uy</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse justify-content-center" id="navbarCollapse">
-          <form class="form-inline mt-2 mt-md-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Actividades o Cuponeras" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+
+        <div class="collapse navbar-collapse" id="navbarEntrenamos">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item dropdown">
+        		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCuponera" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Cuponeras</a>
+        		<div class="dropdown-menu" aria-labelledby="navbarDropdownCuponera">
+          			<a class="dropdown-item" href="#">Comprar</a>
+         			<a class="dropdown-item" href="#">Consultar</a>
+        		</div>
+      		</li>
+            <li class="nav-item dropdown">
+        		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownClase" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Clases</a>
+        		<div class="dropdown-menu" aria-labelledby="navbarDropdownClase">
+          			<a class="dropdown-item" href="#">Consulta</a>
+         			<a class="dropdown-item" href="#">Alta</a>
+          			<a class="dropdown-item" href="#">Registro</a>
+        		</div>
+      		</li>
+            <li class="nav-item dropdown">
+        		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownActividades" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Act. Deportivas</a>
+        		<div class="dropdown-menu" aria-labelledby="navbarDropdownActividades">
+          			<a class="dropdown-item" href="#">Alta</a>
+         			<a class="dropdown-item" href="#">Consulta</a>
+        		</div>
+      		</li>
+      		<li class="nav-item dropdown">
+        		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownUsuarios" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Act. Deportivas</a>
+        		<div class="dropdown-menu" aria-labelledby="navbarDropdownUsuarios">
+          			<a class="dropdown-item" href="#">Consulta</a>
+         			<a class="dropdown-item" href="#">Seguir</a>
+         			<a class="dropdown-item" href="#">Dejar de seguir</a>
+        		</div>
+      		</li>
+          </ul>
+          <form class="form-inline my-2 my-md-0">
+            <input class="form-control" type="text" placeholder="Buscar" aria-label="Search">
           </form>
+        </div>
         </div>
         <div class="nav navbar-nav navbar-right">
         	<li><a href="login.html">Iniciar Sesion</a></li>
@@ -33,20 +70,21 @@
         	<li><a href="#">Registrarse</a></li>
         </div>
       </nav>
+      
     </header>
 
     <!-- Begin page content -->
     <main role="main" class="container">
     	<div class="row">
       		<div class="col-6 col-md-4">
-      			<ul id="listaActividades" class="list-group">
+      			<ul id="listaActividades" class="list-group my-4">
   					<li class="list-group-item"><strong>Instituciones Deportivas</strong></li>
   					<li class="list-group-item">Telon</li>
   					<li class="list-group-item">Instituto Natural</li>
   					<li class="list-group-item">Olympic</li>
   					<li class="list-group-item">Fuerza Bruta</li>
 				</ul>
-      			<ul id="listaCategorias" class="list-group">
+      			<ul id="listaCategorias" class="list-group my-4">
   					<li class="list-group-item"><strong>Categorías</strong></li>
   					<li class="list-group-item">Al aire libre</li>
   					<li class="list-group-item">Fitness</li>
@@ -54,7 +92,9 @@
   					<li class="list-group-item">Artes Marciales</li>
 				</ul>
 			</div>
-      		<div class="col-12 col-md-8">.col-12 .col-md-8</div>
+      		<div class="col-12 col-md-8">
+      	
+      		</div>
       	</div>
     </main>
 
@@ -64,12 +104,11 @@
       </div>
     </footer>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="../../../../assets/js/vendor/popper.min.js"></script>
-    <script src="../../../../dist/js/bootstrap.min.js"></script>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+  <!-- Always remember to call the above files first before calling the bootstrap.min.js file -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
   </body>
 </html>
