--- a/tarea2/website_entrenamos.uy/src/main/webapp/index.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/index.html
@@ -51,11 +51,12 @@
         		</div>
       		</li>
       		<li class="nav-item dropdown">
-        		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownUsuarios" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Act. Deportivas</a>
+        		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownUsuarios" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Usuarios</a>
         		<div class="dropdown-menu" aria-labelledby="navbarDropdownUsuarios">
           			<a class="dropdown-item" href="#">Consulta</a>
          			<a class="dropdown-item" href="#">Seguir</a>
          			<a class="dropdown-item" href="#">Dejar de seguir</a>
+         			<a class="dropdown-item" href="#">Modificar mis datos</a>
         		</div>
       		</li>
           </ul>
@@ -93,7 +94,29 @@
 				</ul>
 			</div>
       		<div class="col-12 col-md-8">
-      	
+      			<div class="row">
+      				
+      			</div>
+				<div class="row">
+				  <div class="col-sm-6">
+				    <div class="card">
+				      <div class="card-body">
+				        <h5 class="card-title">Cuponera 1</h5>
+				        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+				        <a href="#" class="btn btn-primary">Ver mas</a>
+				      </div>
+				    </div>
+				  </div>
+				  <div class="col-sm-6">
+				    <div class="card">
+				      <div class="card-body">
+				        <h5 class="card-title">Cuponera 2</h5>
+				        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+				        <a href="#" class="btn btn-primary">Ver mas</a>
+				      </div>
+				    </div>
+				  </div>
+				</div>      	
       		</div>
       	</div>
     </main>
