--- a/tarea2/website_entrenamos.uy/src/main/webapp/index.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/index.html
@@ -18,7 +18,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand" href="#">Entrenamos.uy</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarEntrenamos" aria-controls="navbarEntrenamos" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
