--- a/tarea2/website_entrenamos.uy/src/main/webapp/consultaActividadDeportiva.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/consultaActividadDeportiva.html
@@ -10,7 +10,7 @@
     <link href="./resources/css/bootstrap.min.css" rel="stylesheet" >
     <link href="./resources/css/sticky-footer-navbar.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-			
+		
     <title>entrenamos.uy</title>
   </head>
   <body>
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse" id="navbarEntrenamos">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item dropdown">
         		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCuponera" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Cuponeras</a>
@@ -48,7 +48,7 @@
         		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownActividades" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Act. Deportivas</a>
         		<div class="dropdown-menu" aria-labelledby="navbarDropdownActividades">
           			<a class="dropdown-item" href="altaActividadDeportiva.html">Alta</a>
-         			<a class="dropdown-item" href="consultaActividadDeportiva.html">Consulta</a>
+         			<a class="dropdown-item" href="#">Consulta</a>
         		</div>
       		</li>
       		<li class="nav-item dropdown">
@@ -94,77 +94,72 @@
 				</ul>
 			</div>
       		<div class="col-12 col-md-8">
-      			<div class="row py-4">
-      				<div id="carouselExampleCaptions" class="carousel slide mx-auto" data-ride="carousel">
-					  <ol class="carousel-indicators">
-					    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-					    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-					    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-					  </ol>
-					  <div class="carousel-inner">
-					    <div class="carousel-item active">
-					      <img src="./resources/img/3.jpg" class="d-block w-100" alt="...">
-					    </div>
-					    <div class="carousel-item">
-					      <img src="./resources/img/1.jpg" class="d-block w-100" alt="Jiu-Jitsu">
-					    </div>
-					    <div class="carousel-item">
-					      <img src="./resources/img/2.jpg" class="d-block w-100" alt="...">
-					    </div>
-					  </div>
-					  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-					    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					    <span class="sr-only">Previous</span>
-					  </a>
-					  <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-					    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-					    <span class="sr-only">Next</span>
-					  </a>
-					</div>
-      			</div>
-				<div class="row y-4">
-				  <div class="col-sm-6">
-				    <div class="card">
-				      <div class="card-body">
-				        <h5 class="card-title">Cuponera 1</h5>
-				        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-				        <a href="#" class="btn btn-primary">Ver mas</a>
-				      </div>
+      			<h1>Consulta de Actividad Deportiva</h1>
+      			<form class="my-4">
+				  <div class="form-group row">
+				    <label for="institucionDeportiva" class="col-4 col-form-label">Institucion Deportiva</label> 
+				    <div class="col-8">
+				      <select id="institucionDeportiva" name="institucionDeportiva" class="custom-select" required="required">
+				        <option value="Instituto Natural">Instituto Natural</option>
+				        <option value="Olympic">Olympic</option>
+				        <option value="Telón">Telón</option>
+				        <option value="Fuerza Bruta">Fuerza Bruta</option>
+				      </select>
 				    </div>
 				  </div>
-				  <div class="col-sm-6">
-				    <div class="card">
+				  <div class="form-group row">
+				    <label for="actividadDeportiva" class="col-4 col-form-label">Actividad Deportiva</label> 
+				  	<div class="col-8">
+				      <select id="actividadDeportiva" name="actividadDeportiva" class="custom-select" required="required">
+				        <option value="Instituto Natural">Boxeo I</option>
+				        <option value="Olympic">Natación</option>
+				        <option value="Telón">Aeróbica</option>
+				        <option value="Fuerza Bruta">Bolita</option>
+				      </select>
+				    </div>
+				  </div>
+				</form>
+				<div class="card mb-3" style="max-width: auto;">
+				  <div class="row no-gutters">
+				    <div class="col-md-4">
+				      <img src="./resources/img/a4.jpg" alt="...">
+				    </div>
+				    <div class="col-md-8">
 				      <div class="card-body">
-				        <h5 class="card-title">Cuponera 2</h5>
-				        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-				        <a href="#" class="btn btn-primary">Ver mas</a>
+				        <h5 class="card-title">Boxeo I</h5>
+				        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
 				      </div>
 				    </div>
 				  </div>
 				</div>
-				<div class="card-group my-4">
-				  <div class="card">
-				    <img src="./resources/img/a1.jpg" class="card-img-top" alt="...">
-				    <div class="card-body">
-				      <h5 class="card-title">Actividad 1</h5>
-				      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-				    </div>
+				<ul class="nav nav-tabs" id="myTab" role="tablist">
+				  <li class="nav-item" role="presentation">
+				    <a class="nav-link active" id="detalles-tab" data-toggle="tab" href="#detalles" role="tab" aria-controls="detalles" aria-selected="true">Detalles</a>
+				  </li>
+				  <li class="nav-item" role="presentation">
+				    <a class="nav-link" id="cuponeras-tab" data-toggle="tab" href="#cuponeras" role="tab" aria-controls="cuponeras" aria-selected="false">Cuponeras</a>
+				  </li>
+				  <li class="nav-item" role="presentation">
+				    <a class="nav-link" id="clases-tab" data-toggle="tab" href="#clases" role="tab" aria-controls="clases" aria-selected="false">Clases</a>
+				  </li>
+				</ul>
+				<div class="tab-content" id="myTabContent">
+				  <div class="tab-pane fade show active" id="detalles" role="tabpanel" aria-labelledby="detalles-tab">
+				  	<p class="card-text">Institución Deportiva: Fuerza Bruta</p>
+				  	<p class="card-text">Costo: $590</p>
+				  	<p class="card-text">Duración: 120 minutos</p>
+				  	<p class="card-text">Estado: Aceptada</p>
+				  	<p class="card-text">Categorías: Fitness, Artes Marciales</p>
 				  </div>
-				  <div class="card">
-				    <img src="./resources/img/a2.jpg" class="card-img-top" alt="...">
-				    <div class="card-body">
-				      <h5 class="card-title">Actividad 2</h5>
-				      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-				    </div>
+				  <div class="tab-pane fade" id="cuponeras" role="tabpanel" aria-labelledby="cuponeras-tab">
+				  	<p class="card-text">Boxeo Avanzado</p>
+				  	<p class="card-text">Peleas Callejeras</p>
 				  </div>
-				  <div class="card">
-				    <img src="./resources/img/a3.jpg" class="card-img-top" alt="...">
-				    <div class="card-body">
-				      <h5 class="card-title">Actividad 3</h5>
-				      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-				    </div>
+				  <div class="tab-pane fade" id="clases" role="tabpanel" aria-labelledby="clases-tab">
+				  	<p class="card-text">Clase 1</p>
+				  	<p class="card-text">Clase 2</p>
 				  </div>
-				</div>   	
+				</div>
       		</div>
       	</div>
     </main>
@@ -175,8 +170,14 @@
       </div>
     </footer>
     
+    <script>
+	  $(function () {
+	    $('#myTab li:last-child a').tab('show')
+	  })
+	</script>
+    
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script>window.jQuery || document.write('<script src="../assets/js/vendor/jquery.slim.min.js"><\/script>')</script><script src="../assets/dist/js/bootstrap.bundle.min.js"></script>  
+  <script>window.jQuery || document.write('<script src="../assets/js/vendor/jquery.slim.min.js"><\/script>')</script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
   </body>
