--- a/tarea2/website_entrenamos.uy/src/main/webapp/login.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/login.html
@@ -12,6 +12,7 @@
    <!-- Bootstrap CSS -->
     <link href="./resources/css/bootstrap.min.css" rel="stylesheet" >
     <link href="./resources/css/signin.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
   </head>
 
