--- a/tarea2/website_entrenamos.uy/src/main/webapp/index.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/index.html
@@ -58,6 +58,12 @@
          			<a class="dropdown-item" href="#">Modificar mis datos</a>
         		</div>
       		</li>
+      		<li class="nav-item dropdown">
+        		<a class="nav-link dropdown-toggle" href="#" id="navbarTest" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tests</a>
+        		<div class="dropdown-menu" aria-labelledby="navbarDropdownUsuarios">
+          			<a class="dropdown-item" id="a_cargarDatos" href="TestController">Cargar datos</a>
+        		</div>
+      		</li>
           </ul>
           <form class="form-inline my-2 my-md-0">
             <input class="form-control" type="text" placeholder="Buscar" aria-label="Search">
@@ -65,7 +71,7 @@
         </div>        
       </div>
       <div class="btn-group">
-  		<a href="login.html" class="btn btn-light btn-sm">Iniciar Sesion</a>
+  		<a href="login.jsp" class="btn btn-light btn-sm">Iniciar Sesion</a>
         <a href="#" class="btn btn-light btn-sm">Registrarse</a>
 	  </div>   
     </nav>
