separacion del menu

--- a/tarea2/website_entrenamos.uy/src/main/webapp/menu.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/menu.html
@@ -30,7 +30,7 @@
             <li class="nav-item dropdown">
         		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownActividades" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Act. Deportivas</a>
         		<div class="dropdown-menu" aria-labelledby="navbarDropdownActividades">
-          			<a class="dropdown-item" href="#">Alta</a>
+          			<a class="dropdown-item" href="altaActividadDeportiva.html">Alta</a>
          			<a class="dropdown-item" href="consultaActividadDeportiva.html">Consulta</a>
         		</div>
       		</li>
