consulta dictado de clases

--- a/tarea2/website_entrenamos.uy/src/main/webapp/menu.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/menu.html
@@ -22,7 +22,7 @@
             <li class="nav-item dropdown">
         		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownClase" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Clases</a>
         		<div class="dropdown-menu" aria-labelledby="navbarDropdownClase">
-          			<a class="dropdown-item" href="#">Consulta</a>
+          			<a class="dropdown-item" href="consultaDictadoDeClases.html">Consulta</a>
          			<a class="dropdown-item" href="altaDictadoDeClases.html">Alta</a>
           			<a class="dropdown-item" href="#">Registro</a>
         		</div>
