--- a/tarea2/website_entrenamos.uy/src/main/webapp/menu.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/menu.html
@@ -24,7 +24,7 @@
         		<div class="dropdown-menu" aria-labelledby="navbarDropdownClase">
           			<a class="dropdown-item" href="consultaDictadoDeClases.html">Consulta</a>
          			<a class="dropdown-item" href="altaDictadoDeClases.html">Alta</a>
-          			<a class="dropdown-item" href="#">Registro</a>
+          			<a class="dropdown-item" href="registroDictadoDeClases.html">Registro</a>
         		</div>
       		</li>
             <li class="nav-item dropdown">
