--- a/tarea2/website_entrenamos.uy/src/main/webapp/dejarSeguirUsuario.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/dejarSeguirUsuario.html
@@ -15,7 +15,60 @@
    <body>
       <header>
          <!-- Fixed navbar -->
-         <div class="menuContainer"></div>
+         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+        <a class="navbar-brand" href="#">Entrenamos.uy</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarEntrenamos" aria-controls="navbarEntrenamos" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarEntrenamos">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item dropdown">
+        		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCuponera" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Cuponeras</a>
+        		<div class="dropdown-menu" aria-labelledby="navbarDropdownCuponera">
+          			<a class="dropdown-item" href="#">Comprar</a>
+         			<a class="dropdown-item" href="#">Consultar</a>
+        		</div>
+      		</li>
+            <li class="nav-item dropdown">
+        		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownClase" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Clases</a>
+        		<div class="dropdown-menu" aria-labelledby="navbarDropdownClase">
+          			<a class="dropdown-item" href="consultaDictadoDeClases.html">Consulta</a>
+         			<a class="dropdown-item" href="altaDictadoDeClases.html">Alta</a>
+          			<a class="dropdown-item" href="registroDictadoDeClases.html">Registro</a>
+        		</div>
+      		</li>
+            <li class="nav-item dropdown">
+        		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownActividades" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Act. Deportivas</a>
+        		<div class="dropdown-menu" aria-labelledby="navbarDropdownActividades">
+          			<a class="dropdown-item" href="altaActividadDeportiva.html">Alta</a>
+         			<a class="dropdown-item" href="consultaActividadDeportiva.html">Consulta</a>
+        		</div>
+      		</li>
+      		<li class="nav-item dropdown">
+        		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownUsuarios" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Usuarios</a>
+        		<div class="dropdown-menu" aria-labelledby="navbarDropdownUsuarios">
+          			<a class="dropdown-item" href="#">Consulta</a>
+         			<a class="dropdown-item" href="#">Seguir</a>
+         			<a class="dropdown-item" href="#">Dejar de seguir</a>
+         			<a class="dropdown-item" href="#">Modificar mis datos</a>
+        		</div>
+      		</li>
+          </ul>
+          <form class="form-inline my-2 my-md-0">
+            <input class="form-control" type="text" placeholder="Buscar" aria-label="Search">
+          </form>
+        </div>        
+      </div>
+      <div class="btn-group">
+  		<a href="login.html" class="btn btn-light btn-sm">Iniciar Sesion</a>
+        <a href="#" class="btn btn-light btn-sm">Registrarse</a>
+	  </div>   
+    </nav>
       </header>
       <!-- Begin page content -->
       <main role="main" class="container">
@@ -68,11 +121,7 @@
            $('#myTab li:last-child a').tab('show')
          })
       </script>
-      <script>
-         $(document).ready(function () {
-           $('.menuContainer').load('./menu.html');
-         });
-      </script>  
+     
       <script>window.jQuery || document.write('<script src="../assets/js/vendor/jquery.slim.min.js"><\/script>')</script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
