--- a/tarea2/website_entrenamos.uy/src/main/webapp/consultaPerfilUsuario.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/consultaPerfilUsuario.html
@@ -223,8 +223,8 @@
                   </div>
 
                   <div class="card shadow mb-5">
-                     <div class="card-header py-3">
-                        <p id="clases" class="text-primary m-0 font-weight-bold">Clases</p>
+                     <div id="clases" class="card-header py-3">
+                        <p class="text-primary m-0 font-weight-bold">Clases</p>
                      </div>
                      <div id="clases-cont" class="card-body">
                         <div class="row">
@@ -540,6 +540,11 @@
    });
 </script>
 
+<style>
+   #seguidos-siguiendo:hover, #cuponeras:hover, #act-dep-ing:hover, #clases:hover, #act-dep:hover  {
+   background-color: rgb(232,232,232); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
+</style>
 
 </body>
 
