--- a/tarea2/website_entrenamos.uy/src/main/webapp/home.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/home.html
@@ -32,34 +32,10 @@
               <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item dropdown">
-        		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCuponera" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Cuponeras</a>
+        		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCuponera" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Menu (si es profesor)</a>
         		<div class="dropdown-menu" aria-labelledby="navbarDropdownCuponera">
-          			<a class="dropdown-item" href="#">Comprar</a>
-         			<a class="dropdown-item" href="#">Consultar</a>
-        		</div>
-      		</li>
-            <li class="nav-item dropdown">
-        		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownClase" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Clases</a>
-        		<div class="dropdown-menu" aria-labelledby="navbarDropdownClase">
-          			<a class="dropdown-item" href="consultaDictadoDeClases.html">Consulta</a>
-         			<a class="dropdown-item" href="altaDictadoDeClases.html">Alta</a>
-          			<a class="dropdown-item" href="registroDictadoDeClases.html">Registro</a>
-        		</div>
-      		</li>
-            <li class="nav-item dropdown">
-        		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownActividades" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Act. Deportivas</a>
-        		<div class="dropdown-menu" aria-labelledby="navbarDropdownActividades">
-          			<a class="dropdown-item" href="altaActividadDeportiva.html">Alta</a>
-         			<a class="dropdown-item" href="consultaActividadDeportiva.html">Consulta</a>
-        		</div>
-      		</li>
-      		<li class="nav-item dropdown">
-        		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownUsuarios" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Usuarios</a>
-        		<div class="dropdown-menu" aria-labelledby="navbarDropdownUsuarios">
-          			<a class="dropdown-item" href="#">Consulta</a>
-         			<a class="dropdown-item" href="#">Seguir</a>
-         			<a class="dropdown-item" href="#">Dejar de seguir</a>
-         			<a class="dropdown-item" href="#">Modificar mis datos</a>
+          			<a class="dropdown-item" href="altaActividadDeportiva.html">Alta de Actividad Deportiva</a>
+         			<a class="dropdown-item" href="#">Otra cosa que solo pueda el</a>
         		</div>
       		</li>
           </ul>
@@ -82,10 +58,10 @@
       		<div class="col-6 col-md-4">
       			<ul id="listaActividades" class="list-group my-4">
   					<li class="list-group-item"><strong>Instituciones Deportivas</strong></li>
-  					<li class="list-group-item">Telon</li>
-  					<li class="list-group-item">Instituto Natural</li>
-  					<li class="list-group-item">Olympic</li>
-  					<li class="list-group-item">Fuerza Bruta</li>
+  					<li class="list-group-item"><a href="consultaInstitucionDeportiva.html" class="">Telon</a></li>
+  					<li class="list-group-item"><a href="consultaInstitucionDeportiva.html" class="">Instituto Natural</a></li>
+  					<li class="list-group-item"><a href="consultaInstitucionDeportiva.html" class="">Olympic</a></li>
+  					<li class="list-group-item"><a href="consultaInstitucionDeportiva.html" class="">Fuerza Bruta</a></li>
 				</ul>
       			<ul id="listaCategorias" class="list-group my-4">
   					<li class="list-group-item"><strong>Categorías</strong></li>
@@ -148,21 +124,21 @@
 				  <div class="card">
 				    <img src="./resources/img/a1.jpg" class="card-img-top" alt="...">
 				    <div class="card-body">
-				      <h5 class="card-title">Actividad 1</h5>
+				      <h5 class="card-title"><a href="consultaActividadDeportiva.html" class="">Actividad 1</a></h5>
 				      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
 				    </div>
 				  </div>
 				  <div class="card">
 				    <img src="./resources/img/a2.jpg" class="card-img-top" alt="...">
 				    <div class="card-body">
-				      <h5 class="card-title">Actividad 2</h5>
+				      <h5 class="card-title"><a href="consultaActividadDeportiva.html" class="">Actividad 2</a></h5>
 				      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
 				    </div>
 				  </div>
 				  <div class="card">
 				    <img src="./resources/img/a3.jpg" class="card-img-top" alt="...">
 				    <div class="card-body">
-				      <h5 class="card-title">Actividad 3</h5>
+				      <h5 class="card-title"><a href="consultaActividadDeportiva.html" class="">Actividad 3</a></h5>
 				      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
 				    </div>
 				  </div>
