--- a/tarea2/website_entrenamos.uy/src/main/webapp/altaActividadDeportiva.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/altaActividadDeportiva.html
@@ -29,37 +29,13 @@
         <div class="collapse navbar-collapse" id="navbarEntrenamos">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item dropdown">
-        		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCuponera" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Cuponeras</a>
+        		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCuponera" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Menu (si es profesor)</a>
         		<div class="dropdown-menu" aria-labelledby="navbarDropdownCuponera">
-          			<a class="dropdown-item" href="#">Comprar</a>
-         			<a class="dropdown-item" href="#">Consultar</a>
-        		</div>
-      		</li>
-            <li class="nav-item dropdown">
-        		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownClase" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Clases</a>
-        		<div class="dropdown-menu" aria-labelledby="navbarDropdownClase">
-          			<a class="dropdown-item" href="consultaDictadoDeClases.html">Consulta</a>
-         			<a class="dropdown-item" href="altaDictadoDeClases.html">Alta</a>
-          			<a class="dropdown-item" href="registroDictadoDeClases.html">Registro</a>
-        		</div>
-      		</li>
-            <li class="nav-item dropdown">
-        		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownActividades" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Act. Deportivas</a>
-        		<div class="dropdown-menu" aria-labelledby="navbarDropdownActividades">
-          			<a class="dropdown-item" href="altaActividadDeportiva.html">Alta</a>
-         			<a class="dropdown-item" href="consultaActividadDeportiva.html">Consulta</a>
-        		</div>
-      		</li>
-      		<li class="nav-item dropdown">
-        		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownUsuarios" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Usuarios</a>
-        		<div class="dropdown-menu" aria-labelledby="navbarDropdownUsuarios">
-          			<a class="dropdown-item" href="#">Consulta</a>
-         			<a class="dropdown-item" href="#">Seguir</a>
-         			<a class="dropdown-item" href="#">Dejar de seguir</a>
-         			<a class="dropdown-item" href="#">Modificar mis datos</a>
+          			<a class="dropdown-item" href="#">Alta de Actividad Deportiva</a>
+         			<a class="dropdown-item" href="#">Otra cosa que solo pueda el</a>
         		</div>
       		</li>
           </ul>
@@ -82,10 +58,10 @@
       		<div class="col-6 col-md-4">
       			<ul id="listaActividades" class="list-group my-4">
   					<li class="list-group-item"><strong>Instituciones Deportivas</strong></li>
-  					<li class="list-group-item">Telon</li>
-  					<li class="list-group-item">Instituto Natural</li>
-  					<li class="list-group-item">Olympic</li>
-  					<li class="list-group-item">Fuerza Bruta</li>
+  					<li class="list-group-item"><a href="consultaInstitucionDeportiva.html" class="">Telon</a></li>
+  					<li class="list-group-item"><a href="consultaInstitucionDeportiva.html" class="">Instituto Natural</a></li>
+  					<li class="list-group-item"><a href="consultaInstitucionDeportiva.html" class="">Olympic</a></li>
+  					<li class="list-group-item"><a href="consultaInstitucionDeportiva.html" class="">Fuerza Bruta</a></li>
 				</ul>
       			<ul id="listaCategorias" class="list-group my-4">
   					<li class="list-group-item"><strong>Categorías</strong></li>
