--- a/tarea2/website_entrenamos.uy/src/main/webapp/altaActividadDeportiva.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/altaActividadDeportiva.html
@@ -44,14 +44,9 @@
           </form>
         </div>        
       </div>
-      
       <div class="btn-group">
-		<a class="btn btn-light btn-sm dropdown-toggle" href="#" id="navbarDropdownUsuario" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Nombre del Profe</a>
- 		<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownUsuario">
-   			<a class="dropdown-item" href="#">Ver mi perfil</a>
-  			<a class="dropdown-item" href="#">Modificar mis datos</a>
-  			<a class="dropdown-item" href="#">Cerrar sesion</a>
- 		</div>
+  		<a href="login.html" class="btn btn-light btn-sm">Iniciar Sesion</a>
+        <a href="#" class="btn btn-light btn-sm">Registrarse</a>
 	  </div>   
     </nav>
 		      
@@ -165,8 +160,8 @@
   
   
   
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
-</body>
+  <script>window.jQuery || document.write('<script src="../assets/js/vendor/jquery.slim.min.js"><\/script>')</script><script src="../assets/dist/js/bootstrap.bundle.min.js"></script>  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+  </body>
 </html>
