--- a/tarea2/website_entrenamos.uy/src/main/webapp/login.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/login.html
@@ -1,37 +1,44 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="pagina de inicio de sesion - entrenamos.uy">
-    <meta name="author" content="mbarrera">
+<head>
+<meta charset="utf-8">
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="description"
+	content="pagina de inicio de sesion - entrenamos.uy">
+<meta name="author" content="mbarrera">
 
 
-    <title>LogIn - entrenamos.uy</title>
+<title>LogIn - entrenamos.uy</title>
 
-   <!-- Bootstrap CSS -->
-    <link href="./resources/css/bootstrap.min.css" rel="stylesheet" >
-    <link href="./resources/css/signin.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- Bootstrap CSS -->
+<link href="./resources/css/bootstrap.min.css" rel="stylesheet">
+<link href="./resources/css/signin.css" rel="stylesheet">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  </head>
+</head>
 
-  <body class="text-center">
-    <form class="form-signin">
-      <img class="mb-4" src="./resources/img/login.png" alt="" width="72" height="72">
-      <h1 class="h3 mb-3 font-weight-normal">Iniciar Sesion</h1>
-      <label for="inputEmail" class="sr-only">Email o Nickname</label>
-      <input type="email" id="inputEmail" class="form-control" placeholder="Email o Nickname" required autofocus>
-      <label for="inputPassword" class="sr-only">Contraseña</label>
-      <input type="password" id="inputPassword" class="form-control" placeholder="Contraseña" required>
-      <div class="checkbox mb-3">
-        <label>
-          <input type="checkbox" value="remember-me"> Recordarme
-        </label>
-      </div>
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Iniciar Sesion</button>
-      <a href="index.html" class="btn btn-lg btn-secondary btn-block">Volver</a>
-      <p class="mt-5 mb-3 text-muted">&copy; 2021 - entrenamos.uy</p>
-    </form>
-  </body>
+<body class="text-center">
+	<form class="form-signin">
+		<img class="mb-4" src="./resources/img/login.png" alt="" width="72"
+			height="72">
+		<h1 class="h3 mb-3 font-weight-normal">Iniciar Sesion</h1>
+		<label for="inputEmail" class="sr-only">Email o Nickname</label> <input
+			type="email" id="inputEmail" class="form-control"
+			placeholder="Email o Nickname" required autofocus> <label
+			for="inputPassword" class="sr-only">Contraseña</label> <input
+			type="password" id="inputPassword" class="form-control"
+			placeholder="Contraseña" required>
+		<div class="checkbox mb-3">
+			<label> <input type="checkbox" value="remember-me">
+				Recordarme
+			</label>
+		</div>
+		<button class="btn btn-lg btn-primary btn-block" type="submit">Iniciar
+			Sesion</button>
+		<a href="index.html" class="btn btn-lg btn-secondary btn-block">Volver</a>
+		<p class="mt-5 mb-3 text-muted">&copy; 2021 - entrenamos.uy</p>
+	</form>
+</body>
 </html>
