--- a/tarea2/website_entrenamos.uy/src/main/webapp/altaActividadDeportiva.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/altaActividadDeportiva.html
@@ -3,8 +3,7 @@
 <head>
 
 <meta charset="utf-8">
-<meta name="viewport"
-	content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="entrenamos.uy">
 <meta name="author" content="tpgr03">
 
@@ -13,9 +12,7 @@
 <link href="./resources/css/bootstrap-reboot.min.css" rel="stylesheet">
 <link href="./resources/css/bootstrap-grid.min.css" rel="stylesheet">
 <link href="./resources/css/sticky-footer-navbar.css" rel="stylesheet">
-<link
-	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-	rel="stylesheet">
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 <title>entrenamos.uy</title>
 </head>
@@ -188,9 +185,6 @@
 			<span class="text-muted">Copyright 2021 - Entrenamos.uy</span>
 		</div>
 	</footer>
-
-
-
 
 
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
