--- a/tarea2/website_entrenamos.uy/src/main/webapp/home.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/home.html
@@ -146,8 +146,7 @@
 						<img src="./resources/img/a1.jpg" class="card-img-top" alt="...">
 						<div class="card-body">
 							<h5 class="card-title">
-								<a href="consultaActividadDeportiva.html" class="">Actividad
-									1</a>
+								<a href="consultaActividadDeportiva.html" class="">Voleibol</a>
 							</h5>
 							<p class="card-text">This is a wider card with supporting
 								text below as a natural lead-in to additional content. This
