cambie input por textarea agregue info

--- a/tarea2/website_entrenamos.uy/src/main/webapp/consultaPerfilUsuario-Profesor.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/consultaPerfilUsuario-Profesor.html
@@ -212,9 +212,7 @@
                                              <label for="last_name">
                                                 <strong>Descripcion</strong>
                                              </label>
-                                             <input value="A Denis le interesan los deportes con pelota, 
-                                             principalmente el voleibol y el handball" readonly type="text" class="form-control" id="last_name"
-                                                name="last_name" />
+                                             <textarea rows="1" readonly type="text" class="form-control">A Denis le interesan los deportes con pelota, principalmente el voleibol y el handball</textarea>
                                           </div>
                                        </div>
                                     </div>
@@ -224,9 +222,7 @@
                                              <label for="first_name">
                                                 <strong>Bibliografia</strong>
                                              </label>
-                                             <input value="Denis fue un jugador de voleibol 
-                                             profesional." readonly type="text" class="form-control" id="first_name"
-                                                name="first_name" />
+                                             <textarea rows="1" readonly type="text" class="form-control">Denis fue un jugador de voleibol profesional.</textarea>
                                           </div>
                                        </div>
                                        <div class="col">
@@ -234,8 +230,7 @@
                                              <label for="last_name">
                                                 <strong>Url</strong>
                                              </label>
-                                             <input value="www.denis.com" readonly type="text" class="form-control" id="last_name"
-                                                name="last_name" />
+                                             <textarea rows="1" readonly type="text" class="form-control">www.denis.com</textarea>
                                           </div>
                                        </div>
                                     </div>
@@ -263,18 +258,13 @@
                               <tbody>
                                  <tr>
                                     <th scope="row">1</th>
-                                    <td> <a href="url">link text</a> Mark</td>
-                                    <td>Otto</td>
+                                    <td>Voleibol</td>
+                                    <td>Voleibol en todas sus formas</td>
                                  </tr>
                                  <tr>
                                     <th scope="row">2</th>
-                                    <td>Jacob</td>
-                                    <td>Thornton</td>
-                                 </tr>
-                                 <tr>
-                                    <th scope="row">3</th>
-                                    <td>Larry the Bird</td>
-                                    <td>@twitter</td>
+                                    <td>Atletismo</td>
+                                    <td>100m , 200m, postas y carreras con obstaculos.</td>
                                  </tr>
                               </tbody>
                            </table>
@@ -300,21 +290,9 @@
                               <tbody>
                                  <tr>
                                     <th scope="row">1</th>
-                                    <td> <a href="url">link text</a> Mark</td>
-                                    <td>Otto</td>
-                                    <td>@mdo</td>
-                                 </tr>
-                                 <tr>
-                                    <th scope="row">2</th>
-                                    <td>Jacob</td>
-                                    <td>Thornton</td>
-                                    <td>@fat</td>
-                                 </tr>
-                                 <tr>
-                                    <th scope="row">3</th>
-                                    <td>Larry the Bird</td>
-                                    <td>@twitter</td>
-                                    <td>@fat</td>
+                                    <td>Voleibol</td>
+                                    <td>10/06/21</td>
+                                    <td>Voleibol</td>
                                  </tr>
                               </tbody>
                            </table>
@@ -341,20 +319,15 @@
                               <tbody>
                                  <tr>
                                     <th scope="row">1</th>
-                                    <td> <a href="url">link text</a> Mark</td>
-                                    <td>Otto</td>
-                                    <td>@mdo</td>
+                                    <td>Voleibol II</td>
+                                    <td>Voleibol avanzado.</td>
+                                    <td>Rechazada</td>
                                  </tr>
                                  <tr>
                                     <th scope="row">2</th>
-                                    <td>Jacob</td>
-                                    <td>Thornton</td>
-                                    <td>@fat</td>
-                                 </tr>
-                                 <tr>
-                                    <th scope="row">3</th>
-                                    <td colspan="2">Larry the Bird</td>
-                                    <td>@twitter</td>
+                                    <td>Basquetbol II</td>
+                                    <td>Basequetbol avanzado.</td>
+                                    <td>Ingresada</td>
                                  </tr>
                               </tbody>
                            </table>
