--- a/tarea2/website_entrenamos.uy/src/main/webapp/consultaPerfilUsuario.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/consultaPerfilUsuario.html
@@ -207,7 +207,7 @@
                                              <label for="last_name">
                                                 <strong>Descripcion</strong>
                                              </label>
-                                             <input readonly type="text" class="form-control" id="last_name" name="last_name" />
+                                             <textarea rows="1" readonly type="text" class="form-control"></textarea>
                                           </div>
                                        </div>
                                     </div>
@@ -217,8 +217,7 @@
                                              <label for="first_name">
                                                 <strong>Bibliografia</strong>
                                              </label>
-                                             <input readonly type="text" class="form-control" id="first_name"
-                                                name="first_name" />
+                                             <textarea rows="1" readonly type="text" class="form-control"></textarea>
                                           </div>
                                        </div>
                                        <div class="col">
@@ -226,7 +225,7 @@
                                              <label for="last_name">
                                                 <strong>Url</strong>
                                              </label>
-                                             <input readonly type="text" class="form-control" id="last_name" name="last_name" />
+                                             <textarea rows="1" readonly type="text" class="form-control"></textarea>
                                           </div>
                                        </div>
                                     </div>
